<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    tools:context=".More">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigationView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        android:fontFamily="@font/cambo"
        app:itemIconTint="@color/colorPrimaryText"
        app:itemTextColor="@color/colorPrimaryText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" >

    </android.support.design.widget.BottomNavigationView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="511dp">

        <SearchView
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:background="@color/colorBackground"
            android:fontFamily="@font/cambo">

        </SearchView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/btn_Que_hay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:drawableLeft="@drawable/ic_more_que_hay_aqui"
                    android:fontFamily="@font/fira_sans_condensed_thin"
                    android:text="@string/Que_hay"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorSecondaryText" />

                <TextView
                    android:id="@+id/btn_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:drawableLeft="@drawable/ic_more_info"
                    android:fontFamily="@font/fira_sans_condensed_thin"
                    android:text="@string/inf"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorSecondaryText" />

                <TextView
                    android:id="@+id/btn_feedback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:drawableLeft="@drawable/ic_more_feedback"
                    android:fontFamily="@font/fira_sans_condensed_thin"
                    android:text="@string/feedback"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorSecondaryText" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>