<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigationView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        android:fontFamily="@font/cambo"
        app:itemIconTint="@color/colorPrimaryText"
        app:itemTextColor="@color/colorPrimaryText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".home">

        <SearchView
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:background="@color/colorBackground"
            android:fontFamily="@font/cambo">

        </SearchView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="58dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/MyLibrary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cambo"
                    android:text="@string/My_Library"
                    android:textColor="@color/colorSecondaryText" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView

                            android:layout_width="130dp"
                            android:layout_height="160dp"
                            android:layout_weight="1"
                            app:srcCompat="@mipmap/c" />

                        <ImageView

                            android:layout_width="130dp"
                            android:layout_height="160dp"
                            android:layout_weight="1"
                            app:srcCompat="@mipmap/b" />

                        <ImageView

                            android:layout_width="130dp"
                            android:layout_height="160dp"
                            android:layout_weight="1"
                            app:srcCompat="@mipmap/a" />

                        <ImageView

                            android:layout_width="130dp"
                            android:layout_height="160dp"
                            android:layout_weight="1"
                            app:srcCompat="@mipmap/c" />

                        <ImageView

                            android:layout_width="130dp"
                            android:layout_height="160dp"
                            android:layout_weight="1"
                            app:srcCompat="@mipmap/b" />

                        <ImageView

                            android:layout_width="130dp"
                            android:layout_height="160dp"
                            android:layout_weight="1"
                            app:srcCompat="@mipmap/a" />
                    </LinearLayout>
                </HorizontalScrollView>

                <TextView
                    android:id="@+id/Lineamientos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cambo"
                    android:text="@string/Liniamientos"
                    android:textColor="@color/colorSecondaryText" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView

                            android:layout_width="130dp"
                            android:layout_height="160dp"
                            android:layout_weight="1"
                            app:srcCompat="@mipmap/b" />

                        <ImageView

                            android:layout_width="130dp"
                            android:layout_height="160dp"
                            android:layout_weight="1"
                            app:srcCompat="@mipmap/a" />

                        <ImageView

                            android:layout_width="130dp"
                            android:layout_height="160dp"
                            android:layout_weight="1"
                            app:srcCompat="@mipmap/c" />

                        <ImageView

                            android:layout_width="130dp"
                            android:layout_height="160dp"
                            android:layout_weight="1"
                            app:srcCompat="@mipmap/b" />

                        <ImageView

                            android:layout_width="130dp"
                            android:layout_height="160dp"
                            android:layout_weight="1"
                            app:srcCompat="@mipmap/a" />
                    </LinearLayout>
                </HorizontalScrollView>

                <TextView
                    android:id="@+id/Certificados"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cambo"
                    android:text="@string/Certificado"
                    android:textColor="@color/colorSecondaryText" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView

                            android:layout_width="130dp"
                            android:layout_height="160dp"
                            android:layout_weight="1"
                            app:srcCompat="@mipmap/b" />

                        <ImageView

                            android:layout_width="130dp"
                            android:layout_height="160dp"
                            android:layout_weight="1"
                            app:srcCompat="@mipmap/a" />

                        <ImageView

                            android:layout_width="130dp"
                            android:layout_height="160dp"
                            android:layout_weight="1"
                            app:srcCompat="@mipmap/c" />

                        <ImageView

                            android:layout_width="130dp"
                            android:layout_height="160dp"
                            android:layout_weight="1"
                            app:srcCompat="@mipmap/b" />

                        <ImageView

                            android:layout_width="130dp"
                            android:layout_height="160dp"
                            android:layout_weight="1"
                            app:srcCompat="@mipmap/a" />
                    </LinearLayout>
                </HorizontalScrollView>

                <TextView
                    android:id="@+id/Residencias"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cambo"
                    android:text="@string/Residencias"
                    android:textColor="@color/colorSecondaryText" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView

                            android:layout_width="130dp"
                            android:layout_height="160dp"
                            android:layout_weight="1"
                            app:srcCompat="@mipmap/b" />

                        <ImageView

                            android:layout_width="130dp"
                            android:layout_height="160dp"
                            android:layout_weight="1"
                            app:srcCompat="@mipmap/a" />

                        <ImageView

                            android:layout_width="130dp"
                            android:layout_height="160dp"
                            android:layout_weight="1"
                            app:srcCompat="@mipmap/c" />

                        <ImageView

                            android:layout_width="130dp"
                            android:layout_height="160dp"
                            android:layout_weight="1"
                            app:srcCompat="@mipmap/b" />

                        <ImageView

                            android:layout_width="130dp"
                            android:layout_height="160dp"
                            android:layout_weight="1"
                            app:srcCompat="@mipmap/a" />
                    </LinearLayout>
                </HorizontalScrollView>

                <TextView
                    android:id="@+id/ServicioSocial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cambo"
                    android:text="@string/ServicioSocial"
                    android:textColor="@color/colorSecondaryText" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView

                            android:layout_width="130dp"
                            android:layout_height="160dp"
                            android:layout_weight="1"
                            app:srcCompat="@mipmap/b" />

                        <ImageView

                            android:layout_width="130dp"
                            android:layout_height="160dp"
                            android:layout_weight="1"
                            app:srcCompat="@mipmap/a" />

                        <ImageView

                            android:layout_width="130dp"
                            android:layout_height="160dp"
                            android:layout_weight="1"
                            app:srcCompat="@mipmap/c" />

                        <ImageView

                            android:layout_width="130dp"
                            android:layout_height="160dp"
                            android:layout_weight="1"
                            app:srcCompat="@mipmap/b" />

                        <ImageView

                            android:layout_width="130dp"
                            android:layout_height="160dp"
                            android:layout_weight="1"
                            app:srcCompat="@mipmap/a" />
                    </LinearLayout>
                </HorizontalScrollView>

                <TextView
                    android:id="@+id/Titulacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cambo"
                    android:text="@string/Titulacion"
                    android:textColor="@color/colorSecondaryText" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView

                            android:layout_width="130dp"
                            android:layout_height="160dp"
                            android:layout_weight="1"
                            app:srcCompat="@mipmap/b" />

                        <ImageView

                            android:layout_width="130dp"
                            android:layout_height="160dp"
                            android:layout_weight="1"
                            app:srcCompat="@mipmap/a" />

                        <ImageView

                            android:layout_width="130dp"
                            android:layout_height="160dp"
                            android:layout_weight="1"
                            app:srcCompat="@mipmap/c" />

                        <ImageView

                            android:layout_width="130dp"
                            android:layout_height="160dp"
                            android:layout_weight="1"
                            app:srcCompat="@mipmap/b" />

                        <ImageView

                            android:layout_width="130dp"
                            android:layout_height="160dp"
                            android:layout_weight="1"
                            app:srcCompat="@mipmap/a" />
                    </LinearLayout>
                </HorizontalScrollView>

            </LinearLayout>
        </ScrollView>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>